--- a/etc/couchdb/local.d/geocouch.ini
+++ b/etc/couchdb/local.d/geocouch.ini
@@ -1,7 +1,11 @@
 [daemons]
 spatial_manager={couch_spatial, start_link, []}
 
+[httpd_global_handlers]
+_spatial_merge = {couch_httpd_spatial_merger, handle_req}
+
 [httpd_db_handlers]
+_spatial_cleanup = {couch_httpd_spatial, handle_spatial_cleanup_req}
 _spatial_cleanup = {couch_httpd_spatial, handle_spatial_cleanup_req}
 
 [httpd_design_handlers]
