Pull in dependencies for geometry search
Geometry search needs a WKT parser as well
as Erlgeom to calculate the intersections.

To checkout the dependencies use ./rebar get-deps

Change-Id: Iee54725d9a3bc0783064731bbc56d4a241da38ed

--- a/rebar.config
+++ b/rebar.config
@@ -2,3 +2,10 @@
     % Make sure test/gc_test_util.erl gets compiled
     {src_dirs, ["test"]}
 ]}.
+
+{lib_dirs,["deps"]}.
+
+{deps, [
+    {wkt, ".*", {git, "git://github.com/vmx/wkt.git", {branch, "master"}}},
+    {erlgeom, ".*", {git, "git://github.com/couchbaselabs/erlgeom.git", {branch, "master"}}}
+]}.
