Make it work with more recent rebar versions
Rebar changed it's behavior with commit 4e0c9506f5652adfe19d0e8ee7271d022b2f5832
When you define `src_dir`, you need to name "src" explicitly now.

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [
     % Make sure test/gc_test_util.erl gets compiled
-    {src_dirs, ["test"]}
+    {src_dirs, ["src", "test"]}
 ]}.
 
 {lib_dirs,["deps"]}.
