CBD-697: Restructure the code layout
This commit changes the layout of the files. The vtree is now its
own application. Soon additional applications for the Couchbase
and Apache CouchDB APIs will be created.

Change-Id: Ifc8c19a9d0912e4378034bb2914e28c53e2b082d
Reviewed-on: http://review.couchbase.org/22988
Reviewed-by: Filipe David Borba Manana <fdmanana@gmail.com>
Reviewed-by: Volker Mische <volker.mische@gmail.com>
Tested-by: Volker Mische <volker.mische@gmail.com>

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,1 @@
-{erl_opts, [
-%    warnings_as_errors,
-    % Make sure test/test_util.erl gets compiled
-    {src_dirs, ["src", "test"]}
-]}.
+{sub_dirs, ["vtree"]}.
