CAPI module got renamed
As the current spatial views are broken anyway, the new module can just
replace the old one without a different name. Hence `capi_spatial` can
be used for that module.

Change-Id: I76a1971d3abf54c8af8e025d78fdffd609100d0b
Reviewed-on: http://review.couchbase.org/40133
Reviewed-by: Volker Mische <volker.mische@gmail.com>
Tested-by: Volker Mische <volker.mische@gmail.com>

--- a/gc-couchbase/etc/couchdb/default.d/geocouch.ini
+++ b/gc-couchbase/etc/couchdb/default.d/geocouch.ini
@@ -11,4 +11,4 @@ vtree_min_fill_rate = 0.4
 _spatial_merge = {spatial_http, handle_req}
 
 [httpd_design_handlers]
-_spatial = {capi_spatial_new, handle_view_req}
+_spatial = {capi_spatial, handle_view_req}
