Hard-code the include paths
Instead of dynamically building the include paths from the COUCH_SRC
environment variable, it is not hard-coded. The reason is that setting
environment variables from within CMake is not straight forward.

Change-Id: Ib34d556450d73a601cf16848e5f017cb9b01ca75
Reviewed-on: http://review.couchbase.org/40173
Reviewed-by: Volker Mische <volker.mische@gmail.com>
Tested-by: Volker Mische <volker.mische@gmail.com>

--- a/gc-couchbase/rebar.config
+++ b/gc-couchbase/rebar.config
@@ -1,4 +1,6 @@
 {erl_opts, [
     % Make sure test/gc_test_util.erl gets compiled
-    {src_dirs, ["src", "test"]}
+    {src_dirs, ["src", "test"]},
+    % Include dir for couch_db.hrl and the other header files of the other apps
+    {i, "../../couchdb/src/couchdb"}, {i, "../../couchdb/src"}
 ]}.
