--- a/vtree/rebar.config
+++ b/vtree/rebar.config
@@ -1,5 +1,7 @@
 {erl_opts, [
     warnings_as_errors,
     % Make sure test/test_util.erl gets compiled
-    {src_dirs, ["src", "test"]}
+    {src_dirs, ["src", "test"]},
+    % Include dir for couch_db.hrl
+    {i, "../../couchdb/src/couchdb"}
 ]}.
